--- a/Berners Street .html
+++ b/Berners Street .html
@@ -381,14 +381,14 @@ Welcome, welcome… the name is George Attling, call me george. how can I help y
 
 
 </tw-passagedata><tw-passagedata pid="17" name="100 Ending" tags="" position="3319,3198" size="100,100">You look down upon the riot upon you, and you can’t hold a grimy smirk from taking hold of your expression. You’ve done it. There’s a small fire burning somewhere; some people started beating each other up; you hear screams and shouts from enraged discussions all around you…
-It is done. Berner Street had become absolute Mayhem, a small, seemingly unimportant spot in the city; engulfed in chaos. 
+It is done. Berners Street had become absolute Mayhem, a small, seemingly unimportant spot in the city; engulfed in chaos. 
 “Boy! Boy!” Hook runs towards you, half smiling, half in shock.
 “Mister! I did it, now haven’t I?”
 “Oh, boy-o.” He pauses to catch some breath. “You absolutely, abso-hecking-lutely have outdone yourself, boy. Let me give you this well deserved hug! And a raise! A raise for sure!”
-And so, without a chance for defense, you get overpowered by Hook’s hug, and endure the most literally “breathtaking” experience with the thought of your raise; while Berner Street descends into madness right by your side.
+And so, without a chance for defense, you get overpowered by Hook’s hug, and endure the most literally “breathtaking” experience with the thought of your raise; while Berners Street descends into madness right by your side.
 
 [[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="18" name="Overdone Ending" tags="" position="3481,3200" size="100,100">
-You watch the Berner Street; and get weak at the knees.
+You watch the Berners Street; and get weak at the knees.
 A fire has erupted in one of the houses, and it’s flames are starting to set the roof of the house next to it on fire. You hear someone scream “MURDER!!” and panic erupts; while the fire brigade gets stuck on the way to the scene.
 Helplessly you observe the fire spreading further and further, the screams of the people intensifying. At a certain point you start running for your life; as destructive Chaos starts taking hold of the whole quarter. People trampling over each other in mindless fear; the police, arriving way too late gets stuck on the fire brigade trucks and the people in between; as the brigade can’t seem to decide if they should fight the fire or leave. It’s absolute terror; and you run, run as fast as you can.
 Before you can even get a hold of your thoughts and look where you’re running, you see him. Hook. He’s running towards you, but something isn’t right.
@@ -404,12 +404,12 @@ Well, if that’s the case, you’ll be definitely blamed anyway.
 
 
 
-[[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="19" name="Underperformance Ending" tags="" position="3649,3184" size="100,100">You stand there, and look upon the Berner Street 44 and its surroundings...and are actually a bit disappointed. There’s some murmurs and maybe a dispute here and there, but it doesn’t seem like any aggressive group dynamics might kick in, nor are there any outrageous quarrels to be seen.
+[[Return to Start-&gt;Start]] </tw-passagedata><tw-passagedata pid="19" name="Underperformance Ending" tags="" position="3649,3184" size="100,100">You stand there, and look upon the Berners Street 54 and its surroundings...and are actually a bit disappointed. There’s some murmurs and maybe a dispute here and there, but it doesn’t seem like any aggressive group dynamics might kick in, nor are there any outrageous quarrels to be seen.
 You hear steps behind you.
 “Hmm, boy, disappointing.” It’s Hook. And his expression mirrors what he said.
 “I’m sorry, mister Hook. I gave my best. I can understand your disappointment.”
 “Yeah, yeah. I’ll do it myself next time.” And as he turns around and walks away, you hear him whisper “It’s always the same...useless, all’of em.”
-And so, you write history in a different way than expected. Instead of writing it, you delete an event from the books of history, and the Berner Street Hoax never happened.
+And so, you write history in a different way than expected. Instead of writing it, you delete an event from the books of history, and the Berners Street Hoax never happened.
 
 
 
@@ -694,7 +694,7 @@ Hook laughs out loud. //“LOL!”//, he yells in a strange manner.
 //“What?”//, Beazley and I asked in unisono.
 //“Nothing, nothing.”// He throws his hand in a gesture, grinning, as he continues: //“But, I am intrigued by my fellow’s idea. We could limit the money spent to an acceptable degree by making our agreement…”//, he lifts his eyebrows and grins, //“...a timed one.”//
 //“Timed? As in, 24 hours for example?”//, Beazley barfs.
-//“Uhh, that’s a tad too few time for such a task, I fear. You wouldn’t want this to be an unfair matter, won’t you?”// Hook stands up from his chair; and starts walking around, as he speaks. //“I think 72 hours should be enough. Three days. Starting at ten o’clock today. I’ll need the most part of today to make some…preparations. Throughout the last day, which should be...uhh…”// Hook turns around and hushes back to his desk again, quickly scrolling through his agenda. //“So, well, today’s november the twenty-fifth, and it’ll soon be ten o’clock. Today I’ll prepare everything, mhmm, mhmm…”// he scribbles something into his booklet, then continues, //“tomorrow we’ll organize it all, yes, yes…”// again, he notes a few words, //“and then, at ten o’clock the twenty-seventh, we’ll find ourselves at 44, Berner Street, and watch the…spectacle!”//
+//“Uhh, that’s a tad too few time for such a task, I fear. You wouldn’t want this to be an unfair matter, won’t you?”// Hook stands up from his chair; and starts walking around, as he speaks. //“I think 72 hours should be enough. Three days. Starting at ten o’clock today. I’ll need the most part of today to make some…preparations. Throughout the last day, which should be...uhh…”// Hook turns around and hushes back to his desk again, quickly scrolling through his agenda. //“So, well, today’s november the twenty-fifth, and it’ll soon be ten o’clock. Today I’ll prepare everything, mhmm, mhmm…”// he scribbles something into his booklet, then continues, //“tomorrow we’ll organize it all, yes, yes…”// again, he notes a few words, //“and then, at ten o’clock the twenty-seventh, we’ll find ourselves at 54, Berners Street, and watch the…spectacle!”//
 //“Spectacle? Hook, you’re delusional.”//
 //“I may be, my friend, and now? So, is it a bet?”//
 //“It’s a bet!”// Beazley answers overeager.“No sealing it with a handshake, Hook? Afraid?”
@@ -710,7 +710,7 @@ The nagging feeling of skepticism slowly manifests inside your mind. //“You wa
 //“What opportunity, sir?”// You lift your shoulders and hold up your palms, //“What am I even supposed to do exactly?”//
 //“I’ll prepare money, for you to spend in the name of this bet. And! And I’ll prepare some papers that will identify you as my messenger.”//
 //“And then? I’m still in the unclear about the task itself, sir.”//
-//“You’ll scurry around downtown, and uptown as well if you want. Get people to visit the Berner Street. Make up reasons, set appointments and get the folks over there! It’s quite the easy task, I’d say.”//
+//“You’ll scurry around downtown, and uptown as well if you want. Get people to visit the Berners Street. Make up reasons, set appointments and get the folks over there! It’s quite the easy task, I’d say.”//
 You’re speechless, standing there amidst the room, hand-wringing in confusion.
 Hook speaks up again. //“Don’t give me that flustered look, boy! It’ll be fun! All the consequences and costs will be hung up on Beazley in the end, isn’t it?”//
 //“Yeah, as long as we win the bet.”//
@@ -745,24 +745,24 @@ You nod, feeling a rush of blood to your cheeks. Hook was an author, so the voca
 “Is the bet, that you will try to make a very shady place very famous, sir?”, you quickly throw in your assumption to show that you’re following what he’s saying.
 “Exactly. Now, here’s where you come into play, boy.”
 “How may I serve, sir?”
-“I have a very specific place in mind, you know? Its at the Berner street. An absolute nightmare of a building, to be honest, not more than a ramshackle hut; but -”, he clears his throat, “ I think that is exactly what the task is all about, wouldn’t you agree?”
+“I have a very specific place in mind, you know? Its at the Berners Street. An absolute nightmare of a building, to be honest, not more than a ramshackle hut; but -”, he clears his throat, “ I think that is exactly what the task is all about, wouldn’t you agree?”
 You nod again, adding a sloppy “Yessir”.
-“So, the exact address is 44, Berner St. and the building is officially my property. Some weird inheritance or something. I’ll prepare a small bundle for you that will certify that and your authenticity as my trusted servant, so you may speak and act in my name.”
+“So, the exact address is 54, Berner St. and the building is officially my property. Some weird inheritance or something. I’ll prepare a small bundle for you that will certify that and your authenticity as my trusted servant, so you may speak and act in my name.”
 “That is an honor, Sir, truly. May I know, what exactly I’ll speak and how I’ll have to act though?”
 He looks at you with a witty smirk.
 “You’re such a smart boy, sometimes, at least. I, most logically, want you to go outside; and make this disgrace of a house famous! Do your best, spend as much as you need -” he squints, “- but for god’s sake be considerate. But I’ll easily spend some grands to beat that nutcase. Especially…”
 his smirk returns, this time wider, “...since the loser of the bet has to come up for the costs, hah!”
  
  [[Continue]] </tw-passagedata><tw-passagedata pid="33" name="Only listen halfway; and just try to snap up the most important bits" tags="" position="3482,573" size="100,100">You act like you’re listening, nod in blind agreement; and somehow try to extract the most important info. Hook’s talking in high vocabulary again; and the longer he goes on, the more you have to focus; if you want to or not.
-You understand that there is a bet, something about a house on a certain “Berner Street”, and that you’ll have to organize something. Realizing that you’re not totally following; you slightly lift your hand and ask:” Excuse me sir, what exactly do I have to do again?”
+You understand that there is a bet, something about a house on a certain “Berners Street”, and that you’ll have to organize something. Realizing that you’re not totally following; you slightly lift your hand and ask:” Excuse me sir, what exactly do I have to do again?”
 For a fraction of a second, an expression of disappointment hushes over Hook’s face.
 You think you understand him whispering a “Lord help me..” under his breath, as he starts over again. You’re all ear now; and listening to what he’s saying, you figure out pretty fast what there’s to do. 
-Apparently, Hook had a bit of an argument with Beazley; about if it would be possible to make a random place in London famous. Beazley would disagree, saying, that if it is just a shack downtown; it will never become famous for anything else than maybe being haunted. But Hook is fully convinced, that any place can become noteworthy; or famous; if the right circumstances are given. Hook bestows you with the task, to organize as many different parties and/or people to a certain address; and wants you to assemble as much random people as possible around and in that spot. The afore heard Berner Street it is; house number 44 to be exact. 
+Apparently, Hook had a bit of an argument with Beazley; about if it would be possible to make a random place in London famous. Beazley would disagree, saying, that if it is just a shack downtown; it will never become famous for anything else than maybe being haunted. But Hook is fully convinced, that any place can become noteworthy; or famous; if the right circumstances are given. Hook bestows you with the task, to organize as many different parties and/or people to a certain address; and wants you to assemble as much random people as possible around and in that spot. The afore heard Berners Street it is; house number 54 to be exact. 
 Before you can ask; he explains:” We don’t have an exact time limitation; but we will show Beazley that a few days will be enough. And…” he pauses artistically, “I will prepare a little satchel for you with enough financial backup to fulfill your task today; as well as some papers, so you may identify yourself as my right hand at any time.”
 Right hand?, you blush a bit, feeling kind of honored. “Yes, sir. May I ask a question?”
 “You may, boy.”
 “How do I know if I make the right decisions? I fear that if I call upon the wrong people to come by, then maybe they’ll cause trouble..”
-“That’s exactly what I’m hoping for, boy. You know, this house at the 44. Berner Street is nothing of worth to me. I actually want you to call upon the ‘wrong’ people to come by. Let there be a fuming mess of a disorder down there! Ha ha, let it become utter chaos!”
+“That’s exactly what I’m hoping for, boy. You know, this house at the 54. Berners Street is nothing of worth to me. I actually want you to call upon the ‘wrong’ people to come by. Let there be a fuming mess of a disorder down there! Ha ha, let it become utter chaos!”
 You look at Hook with doubt written all over your expression. “Sir, and you are sure that a ‘satchel’ of money will suffice for this task? What if the ordered people start increasing their wages upon arriving there? What if we get billed for transport costs; what if something brea-”
 “Ah, ah, ah, boy. Calm down. You know, as long as we win this bet; and get this address on the Gazettes; we won’t have to pay anything. I tricked good ol’ Beazley into thinking there would be no chance to win this for us. So he agreed to the condition, that the loser pays it all. Now, what do you say?” 
 He smiles widely, obviously underestimating the situation and the possible drawbacks from this.
@@ -799,13 +799,13 @@ And so, without ever knowing, you prevented the Berners Street Hoax from happeni
 
 </tw-passagedata><tw-passagedata pid="35" name="Continue" tags="" position="3527,929.3333333333334" size="100,100">
 And so, on the next day, you head over to Hook’s office again, ready to do as he pleased. 
-You will go out into the streets of London, and try to get as many people to visit the Berner Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. 
-You try to keep in mind that getting people that don’t like each other to the Berner Street at the same time, will increase the turmoil even more.
+You will go out into the streets of London, and try to get as many people to visit the Berners Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. 
+You try to keep in mind that getting people that don’t like each other to the Berners Street at the same time, will increase the turmoil even more.
 Hook seems very enthusiastic, as he gives you a satchel of money and a few papers wrapped in an envelope. He quickly explains to you why and how the papers are relevant; and advises you to spend the money wisely.
 With a witty smirk on his face he retreats back into his bureau; and wishes you good luck and success.
 
 So you step out into another frosty London fall morning, ready to engage in your given task.
-Make Berner Street famous, no matter what!
+Make Berners Street famous, no matter what!
 
 &lt;&lt;set $phase_collection to true &gt;&gt;
 &lt;&lt;set $money to 100&gt;&gt;
@@ -1681,7 +1681,7 @@ The Irish Guy jumps down his cab and jumps onto Carl Uber. His horses shoo and r
 
 </tw-passagedata><tw-passagedata pid="114" name="Tumult 10" tags="" position="3979,2732" size="100,100">There is a bit of activity going on...oh, wait. No, it’s just a
 swarm of crows flying off.
-</tw-passagedata><tw-passagedata pid="115" name="Tumult 30" tags="" position="3981,2880" size="100,100">Berner Street seems more lively than usual. 
+</tw-passagedata><tw-passagedata pid="115" name="Tumult 30" tags="" position="3981,2880" size="100,100">Berners Street seems more lively than usual. 
 Which...means not much, sadly.
 </tw-passagedata><tw-passagedata pid="116" name="Tumult 40" tags="" position="3979,3013" size="100,100">The general mood seems to be bad. Although the people 
 making up this “general mood” aren’t many yet.
