Example Formatting Photographer

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -140,11 +140,15 @@ width: 200px;
 
 
 
+
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
+
 
 
 
@@ -450,13 +454,15 @@ The old man looks surprised and says with a remarkably deep voice.
 [[What do you mean with entertaining?]]
 [[I would like to have medicine for my Masters bronchite-&gt;Just Medicine]]
 
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="23" name="Photography Shop" tags="" position="2859,749" size="100,100">
-You push the giant shiny hand made glass door of the brand new building and step in. The store is one big room. Two well-dressed gentlemen sit together on a small table having a cup of tea and a chat, while another man in the back of the room is handling something with a big camera. In the other corner, a young lady in a brand new white dress practises some poses in front of a big picture of an empty london street in deep winter. There are also a lot of frames and shelves filled up with cameras, lenses and other stuff.
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="23" name="Photography Shop" tags="" position="3015.6666666666665,622.3333333333334" size="100,100">
+You push the giant shiny hand made glass door of the brand new building and step in. The store is one big room. Two well-dressed gentlemen sit together on a small table having a cup of tea and a chat, while another man in the back of the room is handling something with a big camera. In the other corner, a young lady in a brand new white dress practises some poses in front of a big picture of an empty London street in deep winter. There are also a lot of frames and shelves filled up with cameras, lenses and other stuff.
+
 The whole room is very clean and tidy. Everything shines and sparkles.
 One of the two chatting gentlemen interrupts the talking and turns his head around. He is a very big man, definitely overweight, wearing a dark brand new suit with a black top hat and a big moustache in his chubby face.
+
 He turns up his big nose at you and says in a scottish accent:
 
-//I’ll be with ye in a Moment, Sir.//
+&#39;&#39;Lance McFlare&#39;&#39;//I’ll be with ye in a Moment, Sir.//
 
 He lights his pipe and continues the talk with the other gentleman, also a very big one.
 
@@ -484,7 +490,7 @@ You take a step to the counter in the back section of the room when a fat cat su
 
 [[Hello?! Anybody home?]]] 
 [[Freaking Cat! God damn you dirty beast!]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="Oriental Rugshop" tags="" position="3144.6666666666665,1987" size="100,100">
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="Oriental Rugshop" tags="" position="3144,1987" size="100,100">
 
 You stand in front of a small store wedged in between the giant Larks &amp; Lancer Clothing Company store and a very old theater. You can’t see inside because the showcase is covered with carpets from the inside. A young man opens the door and steps outside followed by two other young men carrying a wrapped carpet. Finally, an elder woman steps outside, talking to a well-dressed gentlemen and says goodbye to him in an extremely polite way. The Gentleman then sees you and immediately welcomes you.
 
@@ -797,7 +803,7 @@ And so, without ever knowing, you prevented the Berners Street Hoax from happeni
 &#39;&#39;The End&#39;&#39;
 [[Back to Start -&gt;Start]] 
 
-</tw-passagedata><tw-passagedata pid="35" name="Continue" tags="" position="3527,929.3333333333334" size="100,100">
+</tw-passagedata><tw-passagedata pid="35" name="Continue" tags="" position="3527,929" size="100,100">
 And so, on the next day, you head over to Hook’s office again, ready to do as he pleased. 
 You will go out into the streets of London, and try to get as many people to visit the Berners Street 54 as you can. The more trouble you stir up, the better, that’s the whole plan. 
 You try to keep in mind that getting people that don’t like each other to the Berners Street at the same time, will increase the turmoil even more.
@@ -805,6 +811,7 @@ Hook seems very enthusiastic, as he gives you a satchel of money and a few paper
 With a witty smirk on his face he retreats back into his bureau; and wishes you good luck and success.
 
 So you step out into another frosty London fall morning, ready to engage in your given task.
+
 Make Berners Street famous, no matter what!
 
 &lt;&lt;set $phase_collection to true &gt;&gt;
@@ -830,7 +837,7 @@ You immediately turn around. Something’s not right. Not at all.
 “You’re fired. Go home.”
 “What?! Becau-”
 “Do. Not. Discuss with me. No law keeps me from doing this. You was supposed to be my assistant. And if my assistant has such a stick up his arse and can’t even involve himself in a lighthearted discussion; what is he good for? Every damn moron can do the paperwork and buy me darn apples and all that bric-a-brac, I employed you because I thought of you as a witty, good-willing youngster. Not a stuck-up bore. Go home now. Dismissed”      
-[[Return to Start -&gt;Start]] </tw-passagedata><tw-passagedata pid="37" name="PassageHeader" tags="" position="5731.333333333333,570" size="100,100">&lt;&lt;if $phase_collection is true&gt;&gt;\
+[[Return to Start -&gt;Start]] </tw-passagedata><tw-passagedata pid="37" name="PassageHeader" tags="" position="5731,570" size="100,100">&lt;&lt;if $phase_collection is true&gt;&gt;\
 &lt;div class=&quot;gameheader&quot;&gt;\
 	&lt;div class=&quot;topbar_left&quot;&gt;\
 	&lt;/div&gt;\
@@ -852,45 +859,45 @@ You immediately turn around. Something’s not right. Not at all.
 	&lt;br style=&quot;clear:left&quot;/&gt;\
 &lt;/div&gt;\
 &lt;&lt;else&gt;&gt;
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="38" name="You stand still and listen to the gentlemen" tags="" position="2302,491" size="100,100">You give a nod, turn around a little bit and take a step beside. There are some magazines laying on another table. You take one of them, scroll through the pages a little bit and try to understand what the gentlemen are talking about.
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="38" name="You stand still and listen to the gentlemen" tags="" position="2510.3333333333335,602.6666666666666" size="100,100">You give a nod, turn around a little bit and take a step beside. There are some magazines laying on another table. You take one of them, scroll through the pages a little bit and try to understand what the gentlemen are talking about.
 
 &lt;&lt;set $photographer_info to true&gt;&gt;
-… you have never seen anything like this, i’m telling you, Lance! You will be the first in the city to own it, i promise you!
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;… you have never seen anything like this, i’m telling you, Lance! You will be the first in the city to own it, i promise you!&quot;//
 
-Ah dinnae ken. Still not sure about the price..
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;Ah Dinnae Ken. Still not sure about the price...&quot;//
 
-Don’t be so stingy! It will pay off! You’ll get way more commissions when it gets around the city that Lance McFlare has this camera!
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;Don’t be so stingy! It will pay off! You’ll get way more commissions when it gets around the city that Lance McFlare has this camera!&quot;//
 
-It’s brand new?
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;It’s brand new?&quot;//
 
-Even newer than brand new, Lance! You even can’t buy it in Germany yet!
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;Even newer than brand new, Lance! You even can’t buy it in Germany yet!&quot;//
 
-So, how will ye get it, mate?
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;So, how will ye get it, mate?&quot;//
 
-Well, you know.. I know a man who knows a man who lives in Leipzig. He knows someone whose brother-in-law works for the company and they have already distributed some test models to professional photographers around Leipzig. In a couple of months they will bring them to the german stores and according to my calculations they will export it in about half a year. So.. At the release date in germany, the professional photographers who testet the cameras, can buy them or give them back. And this is the point where the brother-in-law of the man who knows the man in Leipzig who knows my man comes in; If some of the photographers give their cameras back, he can buy one of them and send it to me. Of course all of the gentlemen want a piece of the cake, but i promise you, it will be worth it!
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;Well, you know.. I know a man who knows a man who lives in Leipzig. He knows someone whose brother-in-law works for the company and they have already distributed some test models to professional photographers around Leipzig. In a couple of months they will bring them to the german stores and according to my calculations they will export it in about half a year. So.. At the release date in germany, the professional photographers who testet the cameras, can buy them or give them back. And this is the point where the brother-in-law of the man who knows the man in Leipzig who knows my man comes in; If some of the photographers give their cameras back, he can buy one of them and send it to me. Of course all of the gentlemen want a piece of the cake, but i promise you, it will be worth it!&quot;//
 
-Hmmm.. I’ll pay more to get a new model a little bit sooner than the other photographers in the city? That’s normally not my kind of business.
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;Hmmm.. I’ll pay more to get a new model a little bit sooner than the other photographers in the city? That’s normally not my kind of business.&quot;//
 
-Think about the prestige, Lance! Everybody will get jealous of you! You even might get a job for “the visitors magazine of London”. This is still your biggest goal, isn’t it?
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;Think about the prestige, Lance! Everybody will get jealous of you! You even might get a job for “The Visitors Magazine of London”. This is still your biggest goal, isn’t it?&quot;//
 
-Sure, mate! If there is anything more that i could reach, it would be a photo of mine printed in the visitors magazine. But still.. i am not sure about the whole story.. There are a lot of gentlemen involved in this and i don’t know anybody of them..
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;Sure, mate! If there is anything more that i could reach, it would be a photo of mine printed in the visitors magazine. But still.. i am not sure about the whole story.. There are a lot of gentlemen involved in this and i don’t know anybody of them...&quot;//
 
-You know me! And you know how i work, don’t you?
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;You know me! And you know how i work, don’t you?&quot;//
 
-Aaaye, but still...
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;Aaaye, but still...&quot;//
 
-Think about it, Lance!
+&#39;&#39;Other Gentleman&#39;&#39; //&quot;Think about it, Lance!&quot;//
 
-I will. While i’m helping the client here.
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;I will. While i’m helping the client here.&quot;//
 
 He stands up, pushes back the chair adjusts his collar and comes straight towards you.
 
-//Aye, Sir, i am sorry that you had to wait, but ye know.. business… My name is Lance McFlare, welcome to my studio!//
+&#39;&#39;Lance McFlare&#39;&#39; //&quot;Aye, Sir, i am sorry that you had to wait, but ye know.. business… My name is Lance McFlare, welcome to my studio!&quot;//
 
 
 [[I need a photographer]]
 [[I’m late, i’ll come back soon-&gt;Blocksford Street]]
-</tw-passagedata><tw-passagedata pid="39" name="You decide to take a walk through the store and check it out a little bit." tags="" position="2672,473" size="100,100">You step towards a frame with old cameras. Some of them have a few traces of usage, but everything is very clean and seems to be lovingly cared.
+</tw-passagedata><tw-passagedata pid="39" name="You decide to take a walk through the store and check it out a little bit." tags="" position="2758.6666666666665,401.3333333333333" size="100,100">You step towards a frame with old cameras. Some of them have a few traces of usage, but everything is very clean and seems to be lovingly cared.
 You take a closer look to a very old camera that looks like a wooden box with a hole in it. On top there is something standing out of it, like a little drawer. You wonder what it is and you put it out a little tiny bit. The big man with the mustache and the top hat interrupts his talking and turns his head to you:
 
 Sir! Please don’t touch! This thing is very fragile and worth a lot!
@@ -1510,7 +1517,7 @@ In the big stir you created you leap out of eyes reach of the flock and move you
 &lt;/span&gt;
 
 
-</tw-passagedata><tw-passagedata pid="94" name="Normal Text" tags="" position="3216,2569" size="100,100">The tumult around Berners Street increses more and more people gather to see the unfolding chaos in front of the house.</tw-passagedata><tw-passagedata pid="95" name="Tumult Debug" tags="" position="3648.9999999999995,1906.9999999999998" size="100,100">&lt;&lt;set $phase_tumult to true&gt;&gt;
+</tw-passagedata><tw-passagedata pid="94" name="Normal Text" tags="" position="3216,2569" size="100,100">The tumult around Berners Street increses more and more people gather to see the unfolding chaos in front of the house.</tw-passagedata><tw-passagedata pid="95" name="Tumult Debug" tags="" position="3648,1906" size="100,100">&lt;&lt;set $phase_tumult to true&gt;&gt;
 &lt;&lt;set $tumult to 0&gt;&gt;
 [[8.00]]
 
@@ -1596,7 +1603,7 @@ How can i help you, Sir?
 
 [[My employer Mrs. Tottenham wants a professional family portrait for the album.-&gt;Album]]
 
-[[My employer Mrs. Tottenham wants a portrait of her dog. The old Labrador is slowly dying and needs to be caught in a wonderful picture for the next generations.-&gt;Dog]]</tw-passagedata><tw-passagedata pid="104" name="Blocksford Streed" tags="" position="2672,623" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="105" name="Barter Chalcographer" tags="" position="1350,1914" size="100,100">Don’t you even think about photography, Sir! That new rubbish of making pictures will never reach the high quality of an well done artistic engraving!
+[[My employer Mrs. Tottenham wants a portrait of her dog. The old Labrador is slowly dying and needs to be caught in a wonderful picture for the next generations.-&gt;Dog]]</tw-passagedata><tw-passagedata pid="104" name="Blocksford Streed" tags="" position="2487,409.66666666666663" size="100,100">Double-click this passage to edit it.</tw-passagedata><tw-passagedata pid="105" name="Barter Chalcographer" tags="" position="1350,1914" size="100,100">Don’t you even think about photography, Sir! That new rubbish of making pictures will never reach the high quality of an well done artistic engraving!
 Listen, i’ll do it for 17£!
 
 &lt;&lt;if $money gte 17&gt;&gt;
