--- a/Berners Street .html
+++ b/Berners Street .html
@@ -143,11 +143,13 @@ width: 200px;
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
 
 
 
@@ -471,7 +473,7 @@ He lights his pipe and continues the talk with the other gentleman, also a very 
 
 [[Return to the Street-&gt;Blocksford Street]] 
 [[You stand still and listen to the gentlemen]]
-[[You decide to take a walk through the store and check it out a little bit.]]</tw-passagedata><tw-passagedata pid="24" name="Caclographer Workshop" tags="" position="2056.0000000000005,1699" size="100,100">&lt;&lt;if $visitedChalcographer is true&gt;&gt;
+[[You decide to take a walk through the store and check it out a little bit.]]</tw-passagedata><tw-passagedata pid="24" name="Caclographer Workshop" tags="" position="2056,1699" size="100,100">&lt;&lt;if $visitedChalcographer is true&gt;&gt;
 	Hello again dear Sir. My Offer still stands. 20 Pounds just name the 		details and the place.&lt;br/&gt;
 		[[Accept-&gt;Deal Chaclographer]]&lt;br/&gt;
 		[[Return to the Street -&gt;Blocksford Street]] 
@@ -489,17 +491,17 @@ You take a step to the counter in the back section of the room when a fat cat su
 
 [[Hello?! Anybody home?]]
 [[Freaking Cat! God damn you dirty beast!]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="Oriental Rugshop" tags="" position="3144,1987" size="100,100">
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="25" name="Oriental Rugshop" tags="" position="3159,1897" size="100,100">
 
 You stand in front of a small store wedged in between the giant Larks &amp; Lancer Clothing Company store and a very old theater. You can’t see inside because the showcase is covered with carpets from the inside. A young man opens the door and steps outside followed by two other young men carrying a wrapped carpet. Finally, an elder woman steps outside, talking to a well-dressed gentlemen and says goodbye to him in an extremely polite way. The Gentleman then sees you and immediately welcomes you.
 
-Good day, Sir! Welcome! Please, come in! There is still room for you!
+&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Good day, Sir! Welcome! Please, come in! There is still room for you!&quot;//
 
 You enter the tiny shop. It is overfilled with rugs and heavily overcrowded. There are at least thirty people standing around, chatting with each other, checking out the rugs stacked on the floor and hanged on the walls, dealing and discussing with the sellers. The mood is tense, things are hectic.
 
 By passing the gentleman, he speaks to you:
 
-Business is going through the roof! I just came back from a three month business travel through Northwest Africa. People love my new stuff. Oh, from talking so much, i forgot to introduce myself; my name is Weapunder, this is my shop. May i advise you?
+&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Business is going through the roof! I just came back from a three month business travel through Northwest Africa. People love my new stuff. Oh, from talking so much, i forgot to introduce myself; my name is Weapunder, this is my shop. May i advise you?&quot;//
 
 [[Leave the Shop-&gt;Blocksford Street]] 
 [[With pleasure.]]
@@ -914,7 +916,7 @@ You take a closer look to a very old camera that looks like a wooden box with a 
 &lt;&lt;set $money -= 15&gt;&gt;
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;set $photographer to true&gt;&gt;
-[[Blocksford Street]] </tw-passagedata><tw-passagedata pid="42" name="Hello?! Anybody home?" tags="" position="1759.3333333333333,1265.6666666666667" size="100,100">
+[[Blocksford Street]] </tw-passagedata><tw-passagedata pid="42" name="Hello?! Anybody home?" tags="" position="1759,1265" size="100,100">
 After a while, a small skinny man in old brown clothes enters the room from a back room behind the counter. He looks up to you, eyes you up and down, opens the microscope-kinda-lid of his horn glasses and clears his throat.
 
 I heard you, Sir, but i had to finish my work. You know, as an artist i need the flow. It’s hard to restart after getting disturbed.An artist like me needs to focus constantly to get the right result.
@@ -924,13 +926,13 @@ I heard you, Sir, but i had to finish my work. You know, as an artist i need the
 [[You call yourself an artist?-&gt;Artist?]]
 
 
-</tw-passagedata><tw-passagedata pid="43" name="Freaking Cat! God damn you dirty beast!" tags="" position="1767.3333333333335,1862.3333333333333" size="100,100">A small skinny man in old brown clothes rushes into the room from a back room behind the counter. He looks up to you, eyes you up and down, opens the microscope-kinda-lid of his horn glasses and raises a warning finger.
+</tw-passagedata><tw-passagedata pid="43" name="Freaking Cat! God damn you dirty beast!" tags="" position="1767,1862" size="100,100">A small skinny man in old brown clothes rushes into the room from a back room behind the counter. He looks up to you, eyes you up and down, opens the microscope-kinda-lid of his horn glasses and raises a warning finger.
 
 &#39;&#39;Needlestich&#39;&#39; //&quot;I heard that, boy! Don’t you ever call my cat a dirty beast again, huh?!&quot;//
 
 [[I am very sorry, Sir. I didn’t want to be rude. That cat just frightened me, you have to understand. I love pets!-&gt;pets]]
 
-</tw-passagedata><tw-passagedata pid="44" name="Deal Chaclographer" tags="" position="1718.3333333333333,1450.6666666666667" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Sounds good! Saturday 10:00 o’clock? The address is 54 Berners Street.&quot;//
+</tw-passagedata><tw-passagedata pid="44" name="Deal Chaclographer" tags="" position="1718,1450" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Sounds good! Saturday 10:00 o’clock? The address is 54 Berners Street.&quot;//
 
 &lt;&lt;set $money -= 10&gt;&gt;
 &lt;&lt;set $chalcographer to true&gt;&gt;
@@ -1389,7 +1391,7 @@ He walks away and disappears in the next alley.
 
 [[I’m not gonna tell you more than this: Go to 54 Bernerstreet on [enter Date and time]. He will be there. He always carries a gun and a knife. Be prepared! I have to go now -  my master is waiting...-&gt;DealDetective]]</tw-passagedata><tw-passagedata pid="81" name="DealDetective" tags="" position="4388,1136" size="100,100">//Hmmmm… I don’t know if I can trust you in this matter. I will think about this throughly. If i don’t have any clue until [enter date] , I will maybe show up at 54 Berners street.//
 &lt;&lt;set $detective to true&gt;&gt;
-[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="82" name="With pleasure." tags="" position="2909,1990" size="100,100">Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?
+[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="82" name="With pleasure." tags="" position="2917.3333333333335,1990" size="100,100">&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?&quot;//
 
 [[Hard to say. My employer, Mrs. Tottenham wants to replace all the rugs in her house. The current ones are very old and used. We need different colors and sizes. I think the best way to find out would be if you could visit us.-&gt;Replace Rugs]]
 
@@ -1432,12 +1434,12 @@ He walks away and disappears in the next alley.
   &lt;&lt;set $rugdealer_pricecheap to 2&gt;&gt;
 &lt;&lt;/link&gt;&gt;
 
-[[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="87" name="Excuse" tags="" position="1172.3333333333333,1417.3333333333333" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Don’t you worry, Sir. As long as you respect my Artwork, i am always open for a talk, especially if you want me to do my artwork for you. Is that the reason of your visit? By the way, my name is Cooper Needlestich, i am the owner.&quot;//
+[[Still too much. I’m sorry! Have a nice day, Sir!-&gt;Blocksford Street]]</tw-passagedata><tw-passagedata pid="87" name="Excuse" tags="" position="1172,1417" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Don’t you worry, Sir. As long as you respect my Artwork, i am always open for a talk, especially if you want me to do my artwork for you. Is that the reason of your visit? By the way, my name is Cooper Needlestich, i am the owner.&quot;//
 
 [[ Sure.I was assigned by my employer Mrs. Tottenham to hire somebody to make a portrait of her dog, an old and prideful labrador. She fears that he will leave us soon and she wants to have a memory of him lying on her late husband&#39;s former armchair.-&gt;Dog Portrait]]
 
 [[Well, i just wanted to ask the way to the photographers store. It’s the same Street, isn’t it?-&gt;AngeredChalcographer]]
-</tw-passagedata><tw-passagedata pid="88" name="pets" tags="" position="1491.6666666666667,1754" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;hmmmpf… so do you?&quot;//
+</tw-passagedata><tw-passagedata pid="88" name="pets" tags="" position="1491,1754" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;hmmmpf… so do you?&quot;//
 
 [[Well.. you know. they are alright..!-&gt;Excuse]]
 &lt;&lt;linkappend &quot;Just kidding, hate those ugly skunks!&quot;&gt;&gt;
@@ -1549,7 +1551,7 @@ In the big stir you created you leap out of eyes reach of the flock and move you
 [[The Lady can’t afford that, i am sorry!-&gt;No Deal Photographer]]
 &lt;&lt;if $photographer_intel is true&gt;&gt;
 [[Listen, the Lady Tottenham is very well-known in the Borough, has a lot of connections to people you might be interested in. If you would do her this favour, she might do a bit of advertising for your work-&gt;Barter Phographer]]
-&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="98" name="Dog" tags="" position="2182.6666666666665,585" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Well, i have to say that i have an allergic reaction to any pets. I’m sorry, i can’t do this!&quot;//
+&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="98" name="Dog" tags="" position="2182,585" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Well, i have to say that i have an allergic reaction to any pets. I’m sorry, i can’t do this!&quot;//
 
 [[Are you sure that there is no way? The Lady would pay very well!-&gt;Pay Well]]
 
@@ -1570,16 +1572,16 @@ In the big stir you created you leap out of eyes reach of the flock and move you
 [[Oh sorry I can&#39;t afford that goodbye-&gt;Blocksford Street]] 
 &lt;&lt;/if&gt;&gt;
 &lt;&lt;/linkappend&gt;&gt;
-&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="100" name="No Deal Photographer" tags="" position="2365.6666666666665,930" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;I am very sorry Sir, but i can’t do this. There is a lot of work these days.&quot;//
+&lt;&lt;/linkappend&gt;&gt;</tw-passagedata><tw-passagedata pid="100" name="No Deal Photographer" tags="" position="2365,930" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;I am very sorry Sir, but i can’t do this. There is a lot of work these days.&quot;//
 
-[[Blocksford Street]] </tw-passagedata><tw-passagedata pid="101" name="Pay Well" tags="" position="1930,721.6666666666666" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;What do you define as &#39;well paid&#39;, Sir?&quot;//
+[[Blocksford Street]] </tw-passagedata><tw-passagedata pid="101" name="Pay Well" tags="" position="1930,721" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;What do you define as &#39;well paid&#39;, Sir?&quot;//
 
 //I think 11£ should be possible.//
 
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;Well, maybe my allergic reaction to dogs isn’t that bad. Yes, i remember that in general it only happened with cats. Maybe you could pay a little extra of 5£ as a kind of insurance? Just in case that i need to visit the doctor after this commission. And that dog will definitely not walk into my studio! I will bring my stuff to the Lady’s place!&quot;//
 
 [[Alright. This Monday at 8 o&#39;clcok ? The address is 54 Berners Street.-&gt;Deal Photographer]]
-</tw-passagedata><tw-passagedata pid="102" name="Nosy" tags="" position="2281.6666666666665,239.33333333333334" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Of course it is! Are ye familiar with cameras?&quot;//
+</tw-passagedata><tw-passagedata pid="102" name="Nosy" tags="" position="2281,239" size="100,100">&#39;&#39;Lance McFlare&#39;&#39; //&quot;Of course it is! Are ye familiar with cameras?&quot;//
 
 //&quot;Not really. How does this work?&quot;//
 
@@ -1597,28 +1599,28 @@ He stands up, whispers something to the other man and walks towards you.
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;How can i help you, Sir?&quot;//
 
 [[My employer Mrs. Tottenham wants a professional family portrait for the album.-&gt;Album]]
-[[My employer Mrs. Tottenham wants a portrait of her dog. The old Labrador is slowly dying and needs to be caught in a wonderful picture for the next generations.-&gt;Dog]]</tw-passagedata><tw-passagedata pid="104" name="Barter Chalcographer" tags="" position="1346.6666666666667,1914" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Don’t you even think about photography, Sir! That new rubbish of making pictures will never reach the high quality of an well done artistic engraving!
+[[My employer Mrs. Tottenham wants a portrait of her dog. The old Labrador is slowly dying and needs to be caught in a wonderful picture for the next generations.-&gt;Dog]]</tw-passagedata><tw-passagedata pid="104" name="Barter Chalcographer" tags="" position="1346,1914" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Don’t you even think about photography, Sir! That new rubbish of making pictures will never reach the high quality of an well done artistic engraving!
 Listen, i’ll do it for 17£!&quot;//
 
 &lt;&lt;if $money gte 17&gt;&gt;
 [[[Sounds good! Monday 8 o’clock? The address is 54 Berners Street.-&gt;Deal Chaclographer]]
 &lt;&lt;/if&gt;&gt;
 
-[[Still too much-&gt;Fail Barter Chalcographer]]</tw-passagedata><tw-passagedata pid="105" name="AngeredChalcographer" tags="" position="1270,1100.6666666666667" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
+[[Still too much-&gt;Fail Barter Chalcographer]]</tw-passagedata><tw-passagedata pid="105" name="AngeredChalcographer" tags="" position="1270,1100" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
 &#39;&#39;Needlestich&#39;&#39; //&quot;You can’t be serious about that, Sir! Oh no.. a gentleman enters my shop, interrupts my artistic workflow and asks for the crappy photographer.. Oh god, how did i deserve this? Please get out, I have to hang myself.&quot;//
 
 [[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="106" name="Fail Barter Chalcographer" tags="" position="1764,2047" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
  &#39;&#39;Needlestich&#39;&#39; //&quot;You really think this is a discount, huh? I am an Artist! Well, go visit a crappy photographer!&quot;//
 
-[[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="107" name="Artist?" tags="" position="1510.3333333333333,1409" size="100,100">This is outrageous! Do i look like a plumber?
+[[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="107" name="Artist?" tags="" position="1510,1409" size="100,100">This is outrageous! Do i look like a plumber?
 
 [[Excuse me, Sir, i don’t mean to be rude. This place just doesn’t look like an artists atelier. And.. you just don’t really look like an artist at all..-&gt;Artist Excuse]]
 
-[[To be honest; What about a really dirty old plumber?-&gt;Anger Artist]]</tw-passagedata><tw-passagedata pid="108" name="Artist Excuse" tags="" position="1553.0000000000002,1205" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Just because i do not paint, neigher look like a fancy painter, it doesn’t mean i do not make art. I still do pictures and - if i may be so bold - in a more artistic way than a painter. And please do not come with that new rubbish they call photography.. Now they try to do pictures with the help of some kinds of light machines.. What a waste of time! Anyway, how can i help you, Sir?&quot;//
+[[To be honest; What about a really dirty old plumber?-&gt;Anger Artist]]</tw-passagedata><tw-passagedata pid="108" name="Artist Excuse" tags="" position="1553,1205" size="100,100">&#39;&#39;Needlestich&#39;&#39; //&quot;Just because i do not paint, neigher look like a fancy painter, it doesn’t mean i do not make art. I still do pictures and - if i may be so bold - in a more artistic way than a painter. And please do not come with that new rubbish they call photography.. Now they try to do pictures with the help of some kinds of light machines.. What a waste of time! Anyway, how can i help you, Sir?&quot;//
 
 [[ Sure.I was assigned by my employer Mrs. Tottenham to hire somebody to make a portrait of her dog, an old and prideful labrador. She fears that he will leave us soon and she wants to have a memory of him lying on her late husband&#39;s former armchair.-&gt;Dog Portrait]]
 
-[[Well, i just wanted to ask the way to the photographers store. It’s the same Street, isn’t it?-&gt;AngeredChalcographer]]</tw-passagedata><tw-passagedata pid="109" name="Anger Artist" tags="" position="1778.3333333333335,1711.3333333333333" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
+[[Well, i just wanted to ask the way to the photographers store. It’s the same Street, isn’t it?-&gt;AngeredChalcographer]]</tw-passagedata><tw-passagedata pid="109" name="Anger Artist" tags="" position="1778,1711" size="100,100">&lt;&lt;set $angered_calcographer to true&gt;&gt;
 &#39;&#39;Needlestich&#39;&#39; //&quot;What about; get out of my shop?!&quot;//
 
 [[Leave the Shop-&gt;Blocksford Street]] </tw-passagedata><tw-passagedata pid="110" name="Keyword" tags="" position="3049,2197" size="100,100">As you wish, Sir! You’ll find me over here!
