--- a/Berners Street .html
+++ b/Berners Street .html
@@ -144,11 +144,13 @@ width: 200px;
 
 
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">Dialog.addClickHandler("#some-element", null, function () {
     Dialog.setup("My Dialog Title", "my-dialog-class");
     Dialog.wiki(Story.get("MyDialogContents").processText());
 });
 Config.history.controls = false;
+
 
 
 
@@ -528,9 +530,7 @@ A brief moment of silence follows, only Beazleys hasty steps from the staircase 
 //“Ahh…”// Hook exhales loudly, sits down and points at the chair on the opposite side of his desk. //“Take a seat, will you. I’ve got something to do for you, boy.”//
 “Well, that’s what I’ve been hired for, no?” You smile a bit and sit down, only to notice the warmth of its preceded occupation. You shudder somewhat, but you try to focus on Hook again. “Tell me, sir. It would be an honor.”
 //“Well, boy, listen up. I trust you, and you know that. Do… you know that?”// He lifts a brow.
-
 //“I sure do, sir.”//
-
 //“That’s good. So, listen carefully…”//
 
 &#39;&#39;What do you do?&#39;&#39;
@@ -726,7 +726,7 @@ Hook speaks up again. //“Don’t give me that flustered look, boy! It’ll be 
 Hook laughs wholeheartedly at my response. Then comes over to tap my shoulder.
 //“Give it a try at least, won’t you? We’ll meet up tomorrow morning, I’ll hand you everything you’ll need. And then, you just take the whole day to assemble as big of a crowd as you can down at Berners.”//
 A silenced sigh escapes you. But, after all you’ve been, at least more or less, persuaded to obey.
-&#39;&#39;fettt&#39;&#39;Hook gives you a few other tasks for the present day; and leaves you with that; expecting you tomorrow morning.//
+&#39;&#39;fett&#39;&#39;Hook gives you a few other tasks for the present day; and leaves you with that; expecting you tomorrow morning.//
 
 [[Accept it -&gt;Continue]] 
 [[Try to talk Hook out of the idea-&gt;Talk Hook out of the idea, explaining how nonsensical this all is.]]
@@ -1391,7 +1391,7 @@ He walks away and disappears in the next alley.
 
 [[I’m not gonna tell you more than this: Go to 54 Bernerstreet on [enter Date and time]. He will be there. He always carries a gun and a knife. Be prepared! I have to go now -  my master is waiting...-&gt;DealDetective]]</tw-passagedata><tw-passagedata pid="81" name="DealDetective" tags="" position="4388,1136" size="100,100">//Hmmmm… I don’t know if I can trust you in this matter. I will think about this throughly. If i don’t have any clue until [enter date] , I will maybe show up at 54 Berners street.//
 &lt;&lt;set $detective to true&gt;&gt;
-[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="82" name="With pleasure." tags="" position="2917.3333333333335,1990" size="100,100">&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?&quot;//
+[[Return to the Street-&gt;Reek Street]] </tw-passagedata><tw-passagedata pid="82" name="With pleasure." tags="" position="2917,1990" size="100,100">&#39;&#39;Victor S. Weapunder&#39;&#39; //&quot;Well, as you can see, there is a wide selection. Do you have any favourites? Colors? Patterns? Size?&quot;//
 
 [[Hard to say. My employer, Mrs. Tottenham wants to replace all the rugs in her house. The current ones are very old and used. We need different colors and sizes. I think the best way to find out would be if you could visit us.-&gt;Replace Rugs]]
 
