--- a/Berners Street .html
+++ b/Berners Street .html
@@ -461,12 +461,12 @@ The old man looks surprised and says with a remarkably deep voice.
 [[I would like to have medicine for my Masters bronchite-&gt;Just Medicine]]
 
 &lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="23" name="Photography Shop" tags="" position="3015,622" size="100,100">
-You push the giant shiny hand made glass door of the brand new building and step in. The store is one big room. Two well-dressed gentlemen sit together on a small table having a cup of tea and a chat, while another man in the back of the room is handling something with a big camera. In the other corner, a young lady in a brand new white dress practises some poses in front of a big picture of an empty London street in deep winter. There are also a lot of frames and shelves filled up with cameras, lenses and other stuff.
+You push the giant, shiny, hand made, wooden framed glass door of the brand new building and step in. The store is one big room. Two well-dressed gentlemen sit together on a small table having a cup of tea and a chat, while another man in the back of the room is handling something with a big camera. In the other corner, a young lady in a brand new white dress practises some poses in front of a big picture of an empty London street in deep winter. There are also a lot of frames and shelves filled up with cameras, lenses and other stuff.
 
 The whole room is very clean and tidy. Everything shines and sparkles.
-One of the two chatting gentlemen interrupts the talking and turns his head around. He is a very big man, definitely overweight, wearing a dark brand new suit with a black top hat and a big moustache in his chubby face.
+One of the two chatting gentlemen interrupts the talking and turns his head around. He is a very big man, definitely overweight, wearing a dark brand new suit with a black top hat, a big moustache covered his upper lip.
 
-He turns up his big nose at you and says in a scottish accent:
+He turns his big nose towards you and says in a scottish accent:
 
 &#39;&#39;Lance McFlare&#39;&#39;//I’ll be with ye in a Moment, Sir.//
 
