You decide to walk thru store correction
Stuff

--- a/Berners Street .html
+++ b/Berners Street .html
@@ -898,8 +898,8 @@ He stands up, pushes back the chair adjusts his collar and comes straight toward
 
 [[I need a photographer]]
 [[I’m late, i’ll come back soon-&gt;Blocksford Street]]
-</tw-passagedata><tw-passagedata pid="39" name="You decide to take a walk through the store and check it out a little bit." tags="" position="2758,401" size="100,100">You step towards a frame with old cameras. Some of them have a few traces of usage, but everything is very clean and seems to be lovingly cared.
-You take a closer look to a very old camera that looks like a wooden box with a hole in it. On top there is something standing out of it, like a little drawer. You wonder what it is and you put it out a little tiny bit. The big man with the mustache and the top hat interrupts his talking and turns his head to you:
+</tw-passagedata><tw-passagedata pid="39" name="You decide to take a walk through the store and check it out a little bit." tags="" position="2758,401" size="100,100">You step towards a cabinet displaying old cameras. Some of them have a few traces of usage, but everything is very clean and seems to be lovingly cared for.
+You take a closer look at a sporadic prototype of a camera that basically looks like a wooden box with a hole in it. On top there is something poking out of it, like a little drawer. You wonder what it is and you put it out just a tiny bit. The big man with the moustache and the top hat interrupts his talking and turns his head towards you:
 
 &#39;&#39;Lance McFlare&#39;&#39; //&quot;Sir! Please don’t touch! This thing is very fragile and worth a lot!&quot;//
 
